# ai-translator

./: .cursorrules  .dockerignore  .env.example  .gitignore  ADD_FRONTEND_SERVICE.md  APP_PLATFORM_VS_DROPLET.md  CLAUDE.md  DEPLOYMENT_DIGITALOCEAN.md  DEPLOY_FRONTEND.md  DOCKER_DEPLOYMENT.md  DOCKER_LOCAL_TESTING.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  FIX_PROMPT_DEPLOYMENT.md  LANDING_PAGE.md  LOKI_SETUP.md  QUICK_DEPLOY.md  README.md  README_LOKI.md  REPLACE_APP_SPEC.md  RESTART_BACKEND.md  ROADMAP.md  SET_ENV_VARS.md  TEST_LOCALLY.md  deploy-droplet.sh  docker-build-local.sh  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  docker-start.sh  docker-test.sh  nginx.conf  prompt-reviewer.md  prompt-translator.md  prompt.md  pyproject.toml  run_api.sh  run_frontend.sh  run_ngrok.sh  (+10 more)
.do/: app.yaml
data/: memory.json
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
glossary/: Glossar Raiffeisen Pensionskasse.doc  WfGlossaryAon de-it.txt  WfGlossaryAon fr-it.txt  glossary.csv  memory.json  terminologie aon d i f.docx  terminologie genevoise d i f.docx
scripts/: build_glossary.py
src/legal_translator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/translator/: __init__.py  admin_ch_search.py  api.py  auth.py  batch_runner.py  claude_client.py  cli.py  (+14 more)
tests/: test_api.py  test_batch_runner.py  test_cli_stats.py  test_pdf_io.py  test_pdf_memory_chunking.py  test_pdf_writer.py  test_terminology.py
(+22 files in other folders)
